implement swipe to delete and undo in the RecyclerView and the database
the records are deleted from the database
and the RecyclerView by swipe

in the undo delete case by click on the undo snackbar's action
the records are added back to the RecyclerView at the initial position
and added back to the database with the initial database id

(the db automatically sorts the records in ascending order of their database id,
thus, the restored record is returned to its initial position in the database,
so that later the records are read from the database and displayed in the RecyclerView
in the correct chronological order)

add a SwipeToDeleteCallback class that contains the code
that will run once the item is swiped
This is passed into ItemTouchHelper’s constructor

add an OnGratitudeDeleteListener interface
and its initialization in SwipeToDeleteCallback constructor
for handling item deletion from any class

create a new ItemTouchHelper that watches for swipes using SwipeToDeleteCallback
and attach it to the RecyclerView in the MainActivity class

add recentlyDeletedGratitude, recentlyDeletedGratitudePosition, clContainer
in the MainActivity class
add showUndoSnackbar and undoDelete functions in the MainActivity class

add addRecord(String text, long id) function to the DB class
for restoring records with their initial database id

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GratitudeDiary</string>
+    <string name="snackbar_text">Удалено</string>
+    <string name="snackbar_action">Отмена</string>
 </resources>
